# trabalho-fcg

./: .gitignore  CMakeLists.txt  Laboratorio_5.cbp  Laboratorio_5.depend  Laboratorio_5.layout  README.md
include/: collisions.h
shaders/: simple.frag
src/: collisions.cpp  main.cpp  shader_fragment.glsl  shader_vertex.glsl
